Fix horizintal scrolling issue
Sometimes elements span beyond the expected width of the page and some browsers add horizontal scrolling behaviour.

--- a/freesound/static/bw-frontend/styles/atoms/carousel.scss
+++ b/freesound/static/bw-frontend/styles/atoms/carousel.scss
@@ -56,7 +56,7 @@
 
 .carousel-right {
   transform: translateX(50%) translateY(-50%);
-  right: 0px;
+  right: 2px;
 
   .bw-icon-arrow:hover {
     color: $red;
@@ -65,7 +65,7 @@
 
 .carousel-left {
   transform: rotate(-180deg) translateY(50%) translateX(50%);
-  left: 0;
+  left: 2px;
 
   .bw-icon-arrow:hover {
     color: $red;
