--- a/freesound/static/bw-frontend/styles/molecules/explicit.scss
+++ b/freesound/static/bw-frontend/styles/molecules/explicit.scss
@@ -25,3 +25,7 @@
     height: initial;
     width: initial;
 }
+
+.blocker-force-almost-full-width {
+    width: 95%;
+}
